--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -1,3 +1,23 @@
 .menu {
-	margin-left: 20px;
+	background: url('./../img/bg/menu-bg.jpg') center center / cover no-repeat;
+	position: relative;
+}
+
+.menu__title {
+	position: absolute;
+	top:20%;
+	left: 15%;
+	z-index: $z-index-10;
+
+	@include laptop {
+		left: 10%;
+	}
+
+	@include tablets {
+		top: 10%;
+	}
+}
+
+.menu__content {
+	height: 100%;
 }
