--- a/css/main.scss
+++ b/css/main.scss
@@ -17,8 +17,8 @@ $hover-black: #1f2122;
 
 //z-index
 
-$z-index-10: 10; // - logo, hamburger-open-close-btn, menu__title
-$z-index-20: 20; // vertical-accordeon__item(адаптив)
+$z-index-10: 10; // - .header--fullscreen, menu__title
+$z-index-20: 20; // logo, hamburger-open-close-btn, vertical-accordeon__item(адаптив)
 $z-fixed-menu: 100;
 $z-index-video-bg: -10;
 
