--- a/css/main.css
+++ b/css/main.css
@@ -738,6 +738,72 @@ button {
           justify-content: space-between;
   padding-top: 0.75rem;
 }
+.header--fullscreen .nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: rgba(47, 50, 52, 0.95);
+}
+.header--fullscreen .nav__list {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.header--fullscreen .nav__item {
+  margin-right: 0;
+  margin-bottom: 2.1875rem;
+}
+.header--fullscreen .nav__item::after {
+  display: none;
+}
+.header--fullscreen .nav__item:last-child {
+  margin-bottom: 0;
+}
+.header--fullscreen .nav__link {
+  font-size: 2.1875rem;
+}
+@media screen and (max-width: 480px) {
+  .header--fullscreen .nav__link {
+    font-size: 1.5625rem;
+  }
+}
+.header--fullscreen .hamburger-menu__line:nth-child(1) {
+  position: relative;
+  display: none;
+}
+.header--fullscreen .hamburger-menu__line:nth-child(2) {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+  display: none;
+}
+.header--fullscreen .hamburger-menu__line:nth-child(3) {
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  display: none;
+}
+.header--fullscreen .hamburger-menu__line:nth-child(4) {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  display: block;
+}
+.header--fullscreen .hamburger-menu__line:nth-child(5) {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  display: block;
+}
 
 .header__buttons {
   display: -webkit-box;
@@ -1277,7 +1343,7 @@ button {
 .logo {
   width: 6.1415625rem;
   height: 4.6448125rem;
-  z-index: 10;
+  z-index: 20;
 }
 
 .arrow-scroll {
@@ -1483,6 +1549,7 @@ button {
 
 .hamburger-menu {
   height: 40px;
+  width: 30px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1515,7 +1582,7 @@ button {
   -webkit-transition: 0.2s;
   transition: 0.2s;
   display: block;
-  z-index: 10;
+  z-index: 20;
 }
 .hamburger-menu__line:nth-child(1) {
   position: relative;
