--- a/css/blocks/sprite.scss
+++ b/css/blocks/sprite.scss
@@ -70,3 +70,44 @@
 		left: 48%;
 	}
 }
+
+.burger-icon {
+	width: rem(45.748px);
+	height: rem(44.625px);
+}
+
+
+.kkal {
+	width: rem(60px);
+	height: rem(60.178px);
+}
+
+.beef {
+	width: rem(44px);
+	height: rem(39.212px);
+}
+
+.buns {
+	width: rem(48px);
+	height: rem(30.317px);
+}
+
+.salad {
+	width: rem(38px);
+	height: rem(38.638px);
+}
+
+.sauce{
+	width: rem(40.189px);
+	height: rem(43.416px);
+}
+
+.cucumber{
+	width: rem(42px);
+	height: rem(37.754px);
+}
+
+.cheese{
+	width: rem(38.126px);
+	height: rem(34.138px);
+}
