--- a/css/main.css
+++ b/css/main.css
@@ -939,6 +939,45 @@ button {
     bottom: 4.375rem;
   }
 }
+.arrow-scroll-btn--left {
+  left: -4%;
+  bottom: 50%;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+.arrow-scroll-btn--left:hover {
+  bottom: 50%;
+  left: -5%;
+}
+@media screen and (max-width: 768px) {
+  .arrow-scroll-btn--left {
+    left: 4%;
+  }
+}
+.arrow-scroll-btn--right {
+  left: 101%;
+  top: 50%;
+  bottom: 50%;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+}
+.arrow-scroll-btn--right:hover {
+  left: 102%;
+  bottom: 50%;
+}
+@media screen and (max-width: 768px) {
+  .arrow-scroll-btn--right {
+    left: 92%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .arrow-scroll-btn--right {
+    left: 85%;
+  }
+}
 
 .best {
   background: url("./../img/bg/about.jpg") center center/cover no-repeat;
@@ -1417,6 +1456,46 @@ button {
   }
 }
 
+.burger-icon {
+  width: 2.85925rem;
+  height: 2.7890625rem;
+}
+
+.kkal {
+  width: 3.75rem;
+  height: 3.761125rem;
+}
+
+.beef {
+  width: 2.75rem;
+  height: 2.45075rem;
+}
+
+.buns {
+  width: 3rem;
+  height: 1.8948125rem;
+}
+
+.salad {
+  width: 2.375rem;
+  height: 2.414875rem;
+}
+
+.sauce {
+  width: 2.5118125rem;
+  height: 2.7135rem;
+}
+
+.cucumber {
+  width: 2.625rem;
+  height: 2.359625rem;
+}
+
+.cheese {
+  width: 2.382875rem;
+  height: 2.133625rem;
+}
+
 .contacts {
   background: url("../img/bg/map.jpg") center center/cover no-repeat;
   position: relative;
@@ -1694,4 +1773,324 @@ button {
   font-size: 0.875rem;
   line-height: 1.5rem;
   width: 28.125rem;
+}
+
+.burgers-slider {
+  background: -webkit-gradient(linear, left top, left bottom, from(#f9b43b), color-stop(48%, #eb8c38), color-stop(74%, #f9b43b));
+  background: linear-gradient(180deg, #f9b43b 0%, #eb8c38 48%, #f9b43b 74%);
+}
+
+.burger-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+@media screen and (max-width: 768px) {
+  .burger-card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0 7%;
+  }
+}
+
+.burger-card__left {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.burger-card__composition {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+
+.burger-card__composition--item {
+  width: 5.625rem;
+  height: 5.625rem;
+  border-radius: 5px;
+  background: rgba(227, 80, 40, 0.65);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.burger-card__composition--item:hover {
+  background: #e35028;
+}
+.burger-card__composition--item:hover + .burger-card__composition--hover {
+  display: block;
+}
+
+.burger-card__composition-title {
+  font-family: "Gagalin";
+  font-size: 0.875rem;
+  text-align: center;
+  color: #fff;
+}
+
+.burger-card__composition--hover {
+  padding: 0.9375rem 1.25rem;
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
+  display: none;
+}
+
+.burger-card__image {
+  padding: 5%;
+  max-width: 27.5rem;
+  width: 100%;
+}
+@media screen and (max-width: 480px) {
+  .burger-card__image {
+    margin: 20% 0;
+  }
+}
+
+.burger-card__pic {
+  width: 100%;
+}
+
+.burger-card__calory {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 5.625rem;
+  height: 5.625rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  opacity: 0.5;
+  font-family: "Gagalin";
+  color: #fff;
+  text-align: center;
+}
+@media screen and (max-width: 768px) {
+  .burger-card__calory {
+    top: 0;
+    right: 0;
+    bottom: inherit;
+    left: inherit;
+  }
+}
+
+.burger-card__calory--pic {
+  position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.burger-card__calory--kkal-amount {
+  font-size: 20px;
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.burger-card__calory--kkal {
+  font-size: 14px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.burger-card__right {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+@media screen and (max-width: 768px) {
+  .burger-card__right {
+    text-align: center;
+  }
+}
+
+.burger-card__description {
+  font-weight: 300;
+  font-size: 0.875rem;
+  color: #fff;
+  margin-top: 2.5rem;
+  margin-bottom: 1.25rem;
+}
+@media screen and (max-width: 768px) {
+  .burger-card__description {
+    margin-top: 1.25rem;
+    margin-bottom: 0.625rem;
+  }
+}
+
+.burger-card__order {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+@media screen and (max-width: 768px) {
+  .burger-card__order {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.burger-card__order--price {
+  font-family: "Gagalin";
+  font-size: 1.875rem;
+  color: #e35028;
+  line-height: 1;
+  margin-right: 1.875rem;
+}
+
+.burger-card__order--amount {
+  font-size: 4.5rem;
+  margin-right: 0.625rem;
+}
+
+.composition__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 2.5rem;
+  margin-bottom: 0.3125rem;
+}
+.composition__item:last-child {
+  margin-bottom: 0;
+}
+
+.composition__item--text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 0.9375rem;
+  max-width: 12.5rem;
+  width: 100%;
+  font-size: 14px;
+  color: #2f3234;
+}
+
+.composition__item--amount {
+  font-weight: 300;
+}
+
+.slider-dots {
+  height: 4.6875rem;
+  max-width: 58.75rem;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+  margin-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .slider-dots {
+    display: none;
+  }
+}
+
+.slider-dots__img {
+  width: 2.1875rem;
+  height: 2.1875rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+  opacity: 0.6;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  margin-right: 1.875rem;
+}
+.slider-dots__img:last-child {
+  margin-right: 0;
+}
+.slider-dots__img--pic {
+  max-width: 100%;
+}
+
+.slider-dots__img--active, .slider-dots__img:hover {
+  opacity: 1;
 }
