--- a/css/main.scss
+++ b/css/main.scss
@@ -71,3 +71,4 @@ $z-index-video-bg: -10;
 @import "blocks/burger-card.scss";
 @import "blocks/composition.scss";
 @import "blocks/slider-dots.scss";
+@import "blocks/overlay.scss";
