--- a/css/main.scss
+++ b/css/main.scss
@@ -54,6 +54,7 @@ $z-index-video-bg: -10;
 @import "blocks/arrow-scroll-btn.scss";	
 @import "blocks/best.scss";	
 @import "blocks/reviews.scss";	
+@import "blocks/reviews__overlay.scss";	
 @import "blocks/order.scss";
 @import "blocks/form.scss";
 @import "blocks/fixed-menu.scss";
