--- a/css/main.scss
+++ b/css/main.scss
@@ -73,3 +73,5 @@ $z-index-video-bg: -10;
 @import "blocks/composition.scss";
 @import "blocks/slider-dots.scss";
 @import "blocks/overlay.scss";
+@import "blocks/team.scss";
+@import "blocks/staff.scss";
