--- a/css/main.css
+++ b/css/main.css
@@ -2336,3 +2336,162 @@ button {
 .overlay__content {
   padding: 25px 20px;
 }
+
+.team {
+  background: url("./../img/bg/team-bg.jpg") center center/cover no-repeat;
+}
+
+.team__bg {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+  height: 100%;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  background: rgba(47, 50, 52, 0.9);
+}
+@media screen and (max-width: 768px) {
+  .team__bg {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.team__content {
+  max-width: 25rem;
+  width: 98%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #fff;
+}
+
+.staff {
+  margin-top: 3.125rem;
+  max-height: 21.875rem;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.staff__item {
+  margin-bottom: 35px;
+}
+
+.staff__title {
+  font-family: "Gagalin";
+  font-size: 14px;
+  padding-left: 1.25rem;
+  position: relative;
+  cursor: pointer;
+  display: block;
+  width: 100%;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.staff__title::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 5%;
+  border: 6px solid transparent;
+  border-bottom: 8px solid #f9b43b;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.staff__title:hover {
+  color: #f9b43b;
+}
+@media screen and (max-width: 768px) {
+  .staff__title {
+    padding-left: 0;
+    max-width: 12.5rem;
+    margin: 0 auto 1.5625rem;
+  }
+}
+
+.staff__description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 1.5625rem;
+  opacity: 0;
+  height: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+@media screen and (max-width: 768px) {
+  .staff__description {
+    margin-left: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.staff__photo {
+  max-width: 6.25rem;
+  max-height: 6.25rem;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  overflow: hidden;
+}
+@media screen and (max-width: 768px) {
+  .staff__photo {
+    margin-bottom: 0.625rem;
+  }
+}
+
+.staff__pic {
+  -webkit-transform: translateX(-15%);
+          transform: translateX(-15%);
+}
+
+.staff__position-desc {
+  margin-left: 1.25rem;
+}
+@media screen and (max-width: 768px) {
+  .staff__position-desc {
+    margin-left: 0;
+  }
+}
+
+.staff__position {
+  font-weight: bold;
+  margin-bottom: 0.625rem;
+}
+
+.staff__text {
+  font-weight: 300;
+}
+
+.staff__active .staff__description {
+  height: 100%;
+  opacity: 1;
+}
+.staff__active .staff__title {
+  color: #f9b43b;
+}
+.staff__active .staff__title::after {
+  -webkit-transform: rotate(-180deg);
+          transform: rotate(-180deg);
+  top: 35%;
+}
