--- a/css/main.css
+++ b/css/main.css
@@ -2389,6 +2389,8 @@ button {
 
 .staff__item {
   margin-bottom: 35px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .staff__title {
@@ -2428,7 +2430,7 @@ button {
   display: -ms-flexbox;
   display: flex;
   margin-left: 1.5625rem;
-  opacity: 0;
+  overflow: hidden;
   height: 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -2447,10 +2449,8 @@ button {
 }
 
 .staff__photo {
-  max-width: 6.25rem;
-  max-height: 6.25rem;
-  width: 100%;
-  height: 100%;
+  min-width: 6.25rem;
+  height: 6.25rem;
   border-radius: 50%;
   overflow: hidden;
 }
@@ -2483,9 +2483,13 @@ button {
   font-weight: 300;
 }
 
+.staff__active {
+  margin-bottom: 0.625rem;
+}
 .staff__active .staff__description {
-  height: 100%;
-  opacity: 1;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  height: 120px;
 }
 .staff__active .staff__title {
   color: #f9b43b;
