--- a/css/_misc/_keyframes.scss
+++ b/css/_misc/_keyframes.scss
@@ -47,3 +47,15 @@
 			transform: translateX(10em) skewX(-45deg);
 	}
 }
+
+//всплытие модальных окон
+@keyframes zoomIn {
+	 0% {
+		opacity: 0;
+		-webkit-transform: scale3d(0.3, 0.3, 0.3);
+		transform: scale3d(0.3, 0.3, 0.3);
+	}
+	50% {
+		opacity: 1;
+	}
+}
