--- a/css/blocks/arrow-scroll-btn.scss
+++ b/css/blocks/arrow-scroll-btn.scss
@@ -14,52 +14,66 @@
 	}
 
 	&--left {
-		left: -8%;
-		bottom: 50%;
-		top: 35%;
+		bottom: initial;
+		right: initial;
+		left: -5%;
+		top: 39%;
 		transform: translate(0,-50%);
 		transform: rotate(90deg);
 
 		&:hover {
-			bottom: 50%;
-			left: -9%;
+			bottom: initial;
+			top: 39%;
+			left: -6%;
 		}
 
 		@include laptop {
-			left: -3%;
+			left: 1%;
+			z-index: 100;
+
+			&:hover {
+				left: 0;
+			}
 		}
 
 		@include tablets {
 			left: 4%;
+
+			&:hover {
+				left: 3%;
+			}
 		}
 
-		@include phones {
-			left: -4%;
-		}
 	}
 
 
 	&--right {
-		left: 103%;
-		top: 35%;
-		bottom: 50%;
+		bottom: initial;
+		left: initial;
+		right: -5%;
+		top: 39%;
 		transform: rotate(-90deg);
 
 		&:hover {
-			left: 104%;
-			bottom: 50%;
+			bottom: initial;
+			top: 39%;
+			right: -6%;
 		}
 
 		@include laptop {
-			left: 101%;
+			right: 1%;
+
+			&:hover {
+				right: 0;
+			}
 		}
 
 		@include tablets {
-			left: 92%;
-		}
+			right: 4%;
 
-		@include phones {
-			left: 95%;
+			&:hover {
+				right: 3%;
+			}
 		}
 	}
 }
